--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,14 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
 
-# Testing
-/coverage
+# Production build
+dist/
+build/
 
-# Production
-/build
-/dist
-
-# Misc
-.DS_Store
+# Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.env.*.local
 
 # IDE
 .idea/
@@ -30,13 +16,16 @@ yarn-error.log*
 *.swp
 *.swo
 
-# TypeScript
-*.tsbuildinfo
+# OS
+.DS_Store
+Thumbs.db
 
-# Cache
-.cache/
-.next/
-.nuxt/
-.temp/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-*.log 
+# Electron specific
+out/ 
