--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Eine Desktop-Anwendung zur Verwaltung von Prompts und Textbausteinen",
   "main": "dist/main/main.js",
   "scripts": {
-    "dev:electron": "tsc --project electron.tsconfig.json && electron .",
-    "dev:vite": "vite build --watch",
+    "dev:electron": "cross-env NODE_ENV=development tsc --project electron.tsconfig.json && electron .",
+    "dev:vite": "cross-env NODE_ENV=development vite build --watch",
     "dev": "concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
     "build": "tsc --project electron.tsconfig.json && vite build",
     "start": "electron .",
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^24.0.0",
     "eslint": "^8.0.0",
